# wasteland-survivors

./: Cargo.toml  README.md  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: rust.yml
scripts/: check-fmt.sh
src/: main.rs
src/components/: camera.rs  level_plane.rs  mod.rs  movement.rs  plane_chunk.rs  player.rs  test_plane.rs
src/components/animation/: mod.rs  mode_animation.rs  model_animation.rs
src/components/movements/: a_star_movement.rs  mod.rs  movement.rs
src/components/player/: animated_model.rs  gizmo.rs  mod.rs  movement.rs  player.rs
src/enemy/: enemy_components.rs  enemy_movement.rs  enemy_plugin.rs  enemy_system.rs  mod.rs
src/materials/: mod.rs
src/materials/pavement/: checked_floor.rs  mod.rs
src/player/: gizmo_system.rs  mod.rs  player.rs  player_system.rs
src/plugins/: camera_plugin.rs  mod.rs  plane_plugin.rs  player_plugin.rs  test_plane_plugin.rs  tile_selection_plugin.rs
src/shared/: mod.rs  shared_components.rs
src/systems/: camera_system.rs  draw_player_system.rs  level_plane_system.rs  mod.rs  plane_chunk_system.rs  player_movement_system.rs  test_plane_system.rs  tile_selection_system.rs
src/systems/animation/: mod.rs  model_animation_system.rs  movement_to_animation_handler.rs
src/systems/movement/: a_star_movement.rs  mod.rs  movement_system.rs
src/systems/player/: animated_player_system.rs  animation_model_system.rs  gizmo_system.rs  mod.rs  movement_system.rs  player_model.rs  player_system.rs
