[package]
name = "wasteland-survivors"
version = "0.1.0"
edition = "2024"
authors = ["andrzej.witkowski@gmail.com"]
description = "A game built with the Bevy engine where players defend against invaders in a post-apocalyptic wasteland."
license = "MIT"
repository = "https://github.com/andrzejwitkowski/wasteland-survivors"
readme = "README.md"
keywords = ["bevy", "gamedev", "wasteland", "survivors"]
categories = ["game-development", "game-engines"]

[dependencies]
bevy = { version = "0.17.1", features = ["jpeg", "bevy_asset", "bevy_scene", "bevy_gltf"]}
log = "0.4.28"
rand = "0.9.2"
bevy_asset_loader = "0.24.0-rc.1"

[[bin]]
name = "wasteland-survivors"
path = "src/main.rs"

[package.metadata.scripts]
check-fmt = "bash scripts/check-fmt.sh"

[profile.dev]     
debug = true               # debuginfo on
opt-level = 0              # pure debug stays as-is

[profile.dev-fast]  
inherits = "dev"           # inherit settings from dev
debug = true               # keep symbols so breakpoints/locals work
opt-level = 1              # or 2 for more speed; 1 is usually a sweet spot
debug-assertions = false   # turn off expensive checks
overflow-checks = false
incremental = true
codegen-units = 256        # speeds rebuilds
lto = "off"

